[tool.poetry]
name = "strava"
version = "0.1.0"
description = ""
authors = ["Djalma1991 <djalma.1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
